# Signals-Slots

./: CMakeLists.txt  LICENSE  README.md
cmake/: SignalsSlotsConfig.cmake.in  cmake_uninstall.cmake.in
include/SignalsSlots/: AsSlot.h  LibraryCreationUtilities.h  Signal.h  SignalsSlots.h  SignalsSlotsManager.h  Slot.h  SlotBase.h
source/: SignalSlotManager.cpp
